# cpp_example

./: CMakeLists.txt  main.cpp  package_task.cpp  package_task.hpp
numbers/: dll_add_numbers.cpp  dll_add_numbers.h
